Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
11.4, 11.4.3, 11.0(EOL), 11.2(EOL), 11.5(EOL)
-
Production
Description
The issue can be reproduced by creating the following table:
CREATE TABLE `__testIssue` (
|
`ID` INT(10) UNSIGNED NOT NULL AUTO_INCREMENT,
|
`name` VARCHAR(255) NOT NULL COLLATE 'utf8mb3_unicode_ci',
|
`notes` LONGTEXT NOT NULL COLLATE 'utf8mb3_unicode_ci',
|
PRIMARY KEY (`ID`) USING BTREE
|
)
|
COLLATE='utf8mb3_unicode_ci'
|
ENGINE=InnoDB
|
And then insert one test record:
INSERT INTO __testIssue VALUES (NULL, 'test', 'test')
|
And then this query gives 0 results in 11.4.3 while it did return results in 10.11.9:
select test.ID, test.notes from (select ID, notes from __testIssue
|
union
|
select ID, notes from __testIssue) test
|
WHERE ID = 1
|
Some findings:
- changing "WHERE ID = 1" into "WHERE ID > 0" does give results
- changing the colum notes from LONGTEXT into varchar does also give results
- removing the column notes from the select's does give results
Attachments
Issue Links
- causes
-
MDEV-35270 Debug build Assertion from test: DBUG_ASSERT(!(table->key_info[active_index].flags & HA_UNIQUE_HASH)); connect.general
-
- Closed
-
-
MDEV-35342 Server crashes when creating index on a rocksdb table
-
- Closed
-
-
MDEV-35362 Server crashes in handler::ha_index_init upon adding index to RocksDB table
-
- Closed
-
-
MDEV-35399 Assertion `!(table->key_info[active_index].flags & 262144U)' failed in handler::ha_index_init
-
- Closed
-